--- a/pong/style.css
+++ b/pong/style.css
@@ -17,3 +17,48 @@ canvas {
   background: #111;
   border: 2px solid #fff;
 }
+/* Menú hamburger minimalista */
+.navbar {
+  width: 100vw;
+  background: #111;
+  padding: 8px 0;
+  text-align: left;
+  position: relative;
+}
+.hamburger {
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 2rem;
+  cursor: pointer;
+  margin-left: 1em;
+}
+.nav-links {
+  display: none;
+  flex-direction: column;
+  background: #111;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  width: 100vw;
+  padding: 0;
+  margin: 0;
+  z-index: 100;
+}
+.nav-links.open {
+  display: flex;
+}
+.nav-links li {
+  list-style: none;
+  border-bottom: 1px solid #222;
+}
+.nav-links a {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  padding: 1em 2em;
+  font-size: 1.1rem;
+}
+.nav-links a:hover {
+  background: #222;
+}
